[tool.poetry]
name = "ctypes-endian-union"
version = "0.1.0"
homepage = "https://github.com/shawwn/ctypes-endian-union"
description = "Backport of \"bpo-33178: Add BigEndianUnion, LittleEndianUnion classes to ctypes\""
authors = ["Shawn Presser"]
license = "MIT"
readme = "README.md"
packages = [{include = "ctypes_endian_union"}]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Shawn's Website" = "https://www.shawwn.com"
"Support me on Patreon" = "https://www.patreon.com/shawwn"
"@theshawwn on Twitter" = "https://www.twitter.com/theshawwn"
"sillysaurusx on Hacker News" = "https://news.ycombinator.com/threads?id=sillysaurusx"
